--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <script type="text/javascript">
         setTimeout(function() {
             window.location.href = "https://www.four.my.id/home";
         }, 0);
     </script>
+</html>
