--- a/home/index.html
+++ b/home/index.html
@@ -92,6 +92,9 @@
         a {
             color: white;
         }
+        .navbar-nav {
+            background-color: #0f0e0b;
+        }
     </style>
 </head>
 <body>
