--- a/home/index.html
+++ b/home/index.html
@@ -59,6 +59,7 @@
             text-align: left;
             font-size: 14px;
             color: #ffffff;
+            bottom: 1px;
         }
         .footer-content {
             display: flex;
