--- a/home/index.html
+++ b/home/index.html
@@ -79,7 +79,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .banner {
-            background-image: url('banner{1}.png');
+            background-image: url('banner(1).png');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
