--- a/home/index.html
+++ b/home/index.html
@@ -51,7 +51,7 @@
             background-color: #ff9800;
             padding: 20px;
             text-align: center;
-            height: 100px;
+            height: auto;
         }
         footer {
             background-color: #e6a823;
@@ -59,7 +59,6 @@
             text-align: left;
             font-size: 14px;
             color: #ffffff;
-            bottom: 1px;
         }
         .footer-content {
             display: flex;
@@ -77,6 +76,9 @@
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .player-count {
+            color: #000000;
         }
         .banner {
             background-image: url('banner(1).png');
