--- a/home/index.html
+++ b/home/index.html
@@ -51,7 +51,7 @@
             background-color: #ff9800;
             padding: 20px;
             text-align: center;
-            height: auto;
+            height: 100px;
         }
         footer {
             background-color: #e6a823;
