--- a/payment/index.html
+++ b/payment/index.html
@@ -31,7 +31,7 @@
             font-size: 2em;
             color: #ffffff;
         }
-      footer {
+        footer {
             background-color: #e6a823;
             padding: 20px;
             text-align: left;
@@ -69,7 +69,7 @@
             height: 100px;
         }
         .banner {
-            background-image: url('banner.png');
+            background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
