--- a/perks/index.html
+++ b/perks/index.html
@@ -69,7 +69,7 @@
             height: 100px;
         }
         .banner {
-            background-image: url('banner.png');
+            background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
