--- a/store/index.html
+++ b/store/index.html
@@ -93,7 +93,7 @@
             color: #ffffff;
         }
         .banner {
-            background-image: url('banner.png');
+            background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
