--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <script type="text/javascript">
         setTimeout(function() {
-            window.location.href = "https://www.four.my.id/home";
+            window.location.href = "home";
         }, 0);
     </script>
 </html>
