--- a/home/index.html
+++ b/home/index.html
@@ -20,13 +20,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="home"><b>Home</b></a>
+                        <a class="nav-link" href="./home"><b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="store"><b>Store</b></a>
+                        <a class="nav-link" href="./store"><b>Store</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="perks"><b>Perks</b></a>
+                        <a class="nav-link" href="./perks"><b>Perks</b></a>
                     </li>
                     <li class="nav-link">
                         <a href="https://four.my.id/discord"><b>Discord</b></a>
