--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h4>Contact</h4>
                 <p>Email: support@four.my.id</p>
                 <p>Discord: antophd</p>
-                <a href="https://dc.gg/fournetwork" class="a"><p>Four Network Discord server</p></a>
+                <a href="discord" class="a"><p>Four Network Discord server</p></a>
             </div>
             <div class="footer-section">
                 <h4>Follow us</h4>
