--- a/store/index.html
+++ b/store/index.html
@@ -242,7 +242,7 @@
                 <h4>Contact</h4>          
                 <p>Email: support@four.my.id</p>      
                 <p>Discord: antophd</p>       
-                <a href="https://dc.gg/fournetwork" class="a"><p>Four Network discord server</p></a>
+                <a href="https://four.my.id/discord" class="a"><p>Four Network discord server</p></a>
             </div>
             <div class="footer-section">           
                 <h4>Follow us</h4>     
