--- a/perks/index.html
+++ b/perks/index.html
@@ -72,6 +72,7 @@
             background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
+            background-attachment: fixed;
             height: 370px;
             color: white;
             display: flex;
