--- a/store/index.html
+++ b/store/index.html
@@ -213,6 +213,12 @@
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
+    <div>
+        <img src="" alt="">
+        <h2></h2>
+        <p></p>
+        <a href=""></a>
+    </div>
     <div class="content-1"></div>
     <div class="content-1"></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
