--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         });
         
     </script>
+    <div class="content">
+        <h1>IP: mc.four.my.id</h1>
+        <h1>PORT: 19133</h1>
+    </div>
     <div class="content-1">
     </div>
     <div class="content-1">
