--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="card">
             <h3>IP: mc.four.my.id</h3>
             <h3>PORT: 19133</h3>
-        </div
+        </div>
     </div>
     <div class="content-1">
     </div>
