--- a/store/index.html
+++ b/store/index.html
@@ -24,7 +24,7 @@
             color: #ffffff;
         }
         .card {
-            background-color: #fff;
+            background-color: hsl(0, 0%, 100%);
             border-radius: 10px;
             padding: 20px;
             margin: 10px;
