--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <iframe src="four.my.id" title="Test" height="100" width="400"></iframe>
+    <iframe src="https://four.my.id/store" title="Test" height="100" width="400"></iframe>
     <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/embed/trbtn.min.js?v=14-05-2025'></script>
     <script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/antopHD','https://edge-cdn.trakteer.id/images/embed/trbtn-icon.png?v=14-05-2025','40');trbtn.draw(trbtnId);})();</script>
     <h1>Hover Over the Button</h1>
