--- a/test/index.html
+++ b/test/index.html
@@ -28,11 +28,12 @@
     </style>
 </head>
 <body>
-    <iframe src="https://four.my.id/store/index.html" title="Test" height="100" width="400"></iframe>
+    <iframe src="https://four.my.id/store/index.html" title="Test" height="100" width="400" name="test"></iframe>
     <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/embed/trbtn.min.js?v=14-05-2025'></script>
     <script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/antopHD','https://edge-cdn.trakteer.id/images/embed/trbtn-icon.png?v=14-05-2025','40');trbtn.draw(trbtnId);})();</script>
     <h1>Hover Over the Button</h1>
     <a href="#" class="hover-button">Go Up</a>
+    <a href="https://four.my.id/index.html" target="test" style="btn">Test</a>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
