--- a/test/index.html
+++ b/test/index.html
@@ -38,7 +38,7 @@
     <h1>Hover Over the Button</h1>
     <a href="#" class="hover-button">Go Up</a>
     <a href="https://four.my.id/index.html" target="test" style="btn">Test</a>
-    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;"></iframe>
+    <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;"></iframe>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
