--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -8,9 +8,12 @@
             iframe {
                height: 1000;
                width: 200;
+               position: absolute;
+               display: block;
             }
             body {
                 background-color: black;
+                height: 1000;
             }
             </style>
     </head>
