--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.83">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <style>
-            iframe {
+            .iframe {
                height: 1000;
                width: 200;
                position: absolute;
-               display: block;
+               display: none;
+               top: 50%;
             }
             body {
                 background-color: black;
@@ -18,6 +19,12 @@
             </style>
     </head>
     <body>
-        <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;"></iframe>
+        <div class="btn btn-yellow" onclick="openframe">Test</div>
+        <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" class="iframe"></iframe>
+        <script>
+            function openframe {
+                document.getElementById(iframe).style.display = "block";
+            }
+        </script>
     </body>
 </html>
