--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -22,7 +22,7 @@
         <div class="btn btn-yellow" onclick="openframe">Test</div>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" class="iframe"></iframe>
         <script>
-            function openframe {
+            function openframe() {
                 document.getElementById(iframe).style.display = "block";
             }
         </script>
