--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -9,7 +9,7 @@
                 height: 1000;
                 width: 200;
                 position: absolute;
-                display: none;
+                display: block;
                 top: 50%;
             }
             body {
