--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -9,7 +9,7 @@
                 height: 1000;
                 width: 200;
                 position: absolute;
-                display: block;
+                display: none;
                 top: 50%;
             }
             body {
@@ -19,7 +19,7 @@
             </style>
     </head>
     <body>
-        <button class="btn btn-yellow" onclick="openframe">Test</button>
+        <button class="btn btn-yellow" onclick="openframe()">Test</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
