--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -8,7 +8,7 @@
             iframe {
                 height: 1000;
                 width: 200;
-                position: absolute;
+                position: relative;
                 display: none;
                 top: 50%;
             }
