--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <style>
             iframe {
-                height: 1000;
-                width: 200;
+                height: 1000px;
+                width: 200px;
                 position: relative;
                 display: none;
-                top: 50%;
+                top: 10%;
+                left: 30%;
             }
             body {
                 background-color: black;
