--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -17,6 +17,12 @@
                 background-color: black;
                 height: 1000;
             }
+            button {
+                align-items: center;
+                background-color: yellow;
+                border-radius: 10;
+                border-color: red;
+            }
             </style>
     </head>
     <body>
