--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <style>
             iframe {
-                height: 800px;
+                height: 600px;
                 width: 300px;
                 position: relative;
                 display: none;
-                top: 10%;
-                left: 30%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%)
             }
             body {
                 background-color: black;
