--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -8,7 +8,7 @@
             iframe {
                 height: 600px;
                 width: 300px;
-                position: relative;
+                position: absolute;
                 display: none;
                 top: 50%;
                 left: 50%;
