--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -20,9 +20,10 @@
             }
             button {
                 align-items: center;
-                background-color: yellow;
+                color: yellow;
                 border-radius: 10;
                 border-color: red;
+                transform: translate(-50%, -50%)
             }
             </style>
     </head>
