--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,7 @@
         <script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/antopHD','https://edge-cdn.trakteer.id/images/embed/trbtn-icon.png?v=14-05-2025','40');trbtn.draw(trbtnId);})();</script>
         <h1>Hover Over the Button</h1>
         <a href="#" class="hover-button">Go Up</a>
-        <a href="https://four.my.id/index.html" target="test" style="btn">Test</a>
+        <a href="https://four.my.id/index.html" target="test" style="btn btn-yellow">Test</a>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;"></iframe>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
