--- a/test/index.html
+++ b/test/index.html
@@ -44,7 +44,7 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <div>
-            <iframe src="embed/index.html" style="height: 1000px;, width: auto;"></iframe>
+            <iframe src="embed/index.html" style="height: 1000px; width: auto;"></iframe>
         </div>
     </body>
 </html>
