--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=0.83">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <style>
             iframe {
@@ -18,7 +18,7 @@
                 background-color: black;
                 height: 1000;
             }
-            button {
+            .button {
                 align-items: center;
                 color: yellow;
                 border-radius: 10;
@@ -28,11 +28,16 @@
             </style>
     </head>
     <body>
-        <button class="btn btn-yellow" onclick="openframe()">Test</button>
+        <a class=".button btn" onclick="openframe()">Test</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
                 document.getElementById("iframe").style.display = "block";
+                document.styleSheets("exit").style.display = "block";
+            }
+            function closeframe() {
+                document.getElementById("iframe").style.display = "none";
+                document.styleSheets("exit").style.display = "none";
             }
         </script>
     </body>
