--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -33,7 +33,7 @@
     </head>
     <body>
         <a class=".button btn" onclick="openframe()">Test</button>
-        <rect height="48" width="48"></rect>
+        <rect height="48" width="48" fill="blue"></rect>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
