--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -14,9 +14,13 @@
                 left: 50%;
                 transform: translate(-50%, -50%)
             }
-            rect {
-                color: yellow;
+            .exit {
+                height: 48px;
+                width: 48px;
+                text-size-adjust: auto;
+                color: white;
                 left: 90%;
+                display: none;
             }
             body {
                 background-color: black;
@@ -32,8 +36,8 @@
             </style>
     </head>
     <body>
-        <a class=".button btn" onclick="openframe()">Test</button>
-        <rect height="48" width="48" fill="blue"></rect>
+        <a class="button btn" onclick="openframe()">Test</button>
+        <a class="exit" onclick="closeframe()" id="exit">X</a>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
