--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -21,6 +21,7 @@
                 color: white;
                 left: 90%;
                 display: none;
+                top: 10%;
             }
             body {
                 background-color: black;
