--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -15,12 +15,13 @@
                 transform: translate(-50%, -50%)
             }
             .exit {
+                position: relative;
                 height: 48px;
                 width: 48px;
                 text-size-adjust: auto;
                 color: white;
                 left: 90%;
-                display: none;
+                display: block;
                 top: 10%;
             }
             body {
