--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -23,6 +23,11 @@
                 left: 90%;
                 display: block;
                 top: 10%;
+                text-decoration: none;
+            }
+            .exit:hover {
+                color: white;
+                padding: 50%;
             }
             body {
                 background-color: black;
