--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -21,7 +21,7 @@
                 text-size-adjust: auto;
                 color: white;
                 left: 90%;
-                display: block;
+                display: none;
                 top: 10%;
                 text-decoration: none;
             }
