--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -49,11 +49,11 @@
         <script>
             function openframe() {
                 document.getElementById("iframe").style.display = "block";
-                document.styleSheets("exit").style.display = "block";
+                document.getElementById("exit").style.display = "block";
             }
             function closeframe() {
                 document.getElementById("iframe").style.display = "none";
-                document.styleSheets("exit").style.display = "none";
+                document.getElementById("exit").style.display = "none";
             }
         </script>
     </body>
