--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -32,6 +32,7 @@
             body {
                 background-color: black;
                 height: 1000;
+                text-decoration: none;
             }
             .button {
                 align-items: center;
