--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -15,7 +15,7 @@
                 transform: translate(-50%, -50%)
             }
             .exit {
-                position: relative;
+                position: absolute;
                 height: 48px;
                 width: 48px;
                 text-size-adjust: auto;
