--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -18,7 +18,6 @@
                 position: relative;
                 height: 48px;
                 width: 48px;
-                text-size-adjust: auto;
                 color: white;
                 left: 90%;
                 display: none;
@@ -37,7 +36,7 @@
     </head>
     <body>
         <a class="button btn" onclick="openframe()">Test</button>
-        <a class="exit" onclick="closeframe()" id="exit">X</a>
+        <button class="exit" onclick="closeframe()" id="exit">X</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
