--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -35,7 +35,7 @@
             </style>
     </head>
     <body>
-        <a class="button btn" onclick="openframe()">Test</button>
+        <button class="button btn" onclick="openframe()">Test</button>
         <a class="exit" onclick="closeframe()" id="exit">X</a>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
