--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -18,15 +18,9 @@
                 position: relative;
                 height: 48px;
                 width: 48px;
-                color: white;
                 left: 90%;
                 display: none;
                 top: 10%;
-                text-decoration: none;
-            }
-            .exit:hover {
-                color: white;
-                text-decoration: none;
             }
             body {
                 background-color: black;
@@ -36,7 +30,7 @@
     </head>
     <body>
         <button style="color: green;" class="button btn" onclick="openframe()">Test</button>
-        <a class="exit" onclick="closeframe()" id="exit">X</a>
+        <button class="exit" style="color: white;" onclick="closeframe()" id="exit">X</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
