--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <button style="color: green;" class="button btn" onclick="openframe()">Test</button>
-        <button class="exit" style="color: white;" onclick="closeframe()" id="exit">X</button>
+        <button class="exit" onclick="closeframe()" id="exit">X</button>
         <iframe src="https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send asa anonymouse ya biar w ga bingnung -_-&amp;quantity=10&amp;payment_method=qris&amp;display_name=test&amp;" id="iframe"></iframe>
         <script>
             function openframe() {
