--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -167,7 +167,7 @@
         </nav>
     </header>
     <div class="banner">
-        <div class="header-text"><h1> STORE </h1></div>
+        <div class="header-text"><h1> RANK </h1></div>
     </div>
     <hr>
 
