--- a/store/index.html
+++ b/store/index.html
@@ -172,7 +172,7 @@
     <hr>
 
     <div class="card-align">
-        <div class="card">
+        <div class="card" onclick="directrank()">
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p class="p">Free</p>
@@ -238,6 +238,11 @@
             }
             lastScrollY = window.scrollY;
         });
+    </script>
+    <script type="text/javascript">
+        directrank(function() {
+            window.location.href = "https://discord.com/invite/ekPUh8w59W";
+        }, 0);
     </script>
     <footer>
         <div class="footer-content">
