--- a/store/index.html
+++ b/store/index.html
@@ -172,11 +172,13 @@
     <hr>
 
     <div class="card-align">
-        <div class="card" onclick="directrank()">
-            <img src="1.png" alt="Common Rank">
-            <h2>Common Rank</h2>
-            <p class="p">Free</p>
-        </div>
+        <a href="rank">
+            <div class="card">
+                <img src="1.png" alt="Common Rank">
+                <h2>Common Rank</h2>
+                <p class="p">Free</p>
+            </div>
+        </a>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
