--- a/store/index.html
+++ b/store/index.html
@@ -172,13 +172,11 @@
     <hr>
 
     <div class="card-align">
-        <div class="card">
-            <button>
+            <button class="card">
                 <img src="1.png" alt="Common Rank">
                 <h2>Common Rank</h2>
                 <p class="p">Free</p>
             </button>
-        </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
