--- a/store/index.html
+++ b/store/index.html
@@ -172,11 +172,12 @@
     <hr>
 
     <div class="card-align">
+        <a href="rank">
             <button class="card">
-                <img src="1.png" alt="Common Rank">
-                <h2>Common Rank</h2>
-                <p class="p">Free</p>
+                <img src="2.png" alt="Common Rank">
+                <h1>Rank</h1>
             </button>
+        </a>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
