--- a/store/index.html
+++ b/store/index.html
@@ -93,7 +93,7 @@
             color: #ffffff;
         }
         .banner {
-            background-image: url('banner.png');
+            background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
             background-attachment: fixed;
@@ -174,9 +174,10 @@
     <div class="card-align">
         <a href="rank">
             <button class="card">
-                <img src="2.jpg" alt="Common Rank">
-                <h1>Rank</h1>
+                <img src="2.png" alt="Common Rank">
                 <div class="align"></div>
+                <div class="align"></div>
+                <h1>Rank</h1>
                 <div class="align"></div>
                 <div class="align"></div>
             </button>
