--- a/store/index.html
+++ b/store/index.html
@@ -91,6 +91,7 @@
         }
         a {
             color: #ffffff;
+            text-decoration: none;
         }
         .banner {
             background-image: url('banner.jpg');
