--- a/store/index.html
+++ b/store/index.html
@@ -173,15 +173,13 @@
     <hr>
 
     <div class="card-align">
-        <a href="rank">
-            <button class="card">
-                <img src="2.png" alt="Common Rank">
-                <div class="align"></div>
-                <div class="align"></div>
-                <h1>Rank</h1>
-                <div class="align"></div>
-                <div class="align"></div>
-            </button>
+        <a href="rank" class="card">
+            <img src="2.png" alt="Common Rank">
+            <div class="align"></div>
+            <div class="align"></div>
+            <div class="align"></div>
+            <h1>Rank</h1>
+            <div class="align"></div>
         </a>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
