--- a/store/index.html
+++ b/store/index.html
@@ -140,6 +140,10 @@
             background-color: #ff9800;
             color: #ffffff;
         }
+        .card:hover {
+            transform: translateY(-10px);
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
