--- a/store/index.html
+++ b/store/index.html
@@ -177,7 +177,7 @@
     <hr>
 
     <div class="card-align">
-        <a href="rank" class="card">
+        <a href="rank" class="card btn">
             <img src="2.png" alt="Common Rank">
             <div class="align"></div>
             <div class="align"></div>
