--- a/store/index.html
+++ b/store/index.html
@@ -144,6 +144,10 @@
             transform: translateY(-10px);
             text-decoration: none;
         }
+        .img {
+            border-radius: 1px;
+            border-color: black;
+        }
     </style>
 </head>
 <body>
@@ -178,7 +182,7 @@
 
     <div class="card-align">
         <a href="rank" class="card btn">
-            <img src="2.png" alt="Common Rank">
+            <img src="2.png" alt="Common Rank" class="img">
             <div class="align"></div>
             <div class="align"></div>
             <div class="align"></div>
