--- a/store/index.html
+++ b/store/index.html
@@ -147,6 +147,7 @@
         .img {
             border-radius: 1px;
             border-color: black;
+            align-self: center;
         }
     </style>
 </head>
