--- a/store/index.html
+++ b/store/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #ff9800;
+            background-color: #000000;
             margin: 0;
         }
         .header {
@@ -24,7 +24,7 @@
             color: #ffffff;
         }
         .card {
-            background-color: hsl(0, 0%, 100%);
+            background-color: gray;
             border-radius: 10px;
             padding: 20px;
             margin: 10px;
@@ -72,12 +72,12 @@
             margin: 5px 0;
         }
         .content {
-            background-color: #ff9800;
+            background-color: #000000;
             padding: 20px;
             text-align: center;
         }
         .content-1 {
-            background-color: #ff9800;
+            background-color: #000000;
             padding: 20px;
             text-align: center;
             height: 100px;
@@ -95,7 +95,7 @@
         }
         .banner {
             background-image: url('banner.jpg');
-            background-color: #ff9800;
+            background-color: #000000;
             background-size: cover;
             background-attachment: fixed;
             height: 370px;
@@ -122,7 +122,7 @@
         }
         .align {
             color: #ffffff;
-            background-color: #ffffff;
+            background-color: #000000;
             font-size: 400%;
             height: 23px;
         }
@@ -190,14 +190,14 @@
             <h1>Rank</h1>
             <div class="align"></div>
         </a>
-        <div class="card">
-            <img src="2.png" alt="Rare Rank">
-            <h2>Rare Rank</h2>
-            <p class="p">Rp 15k / $0.99</p>
+        <a href="rank" class="card btn">
+            <img src="fragment.png" alt="Fragment" class="img">
             <div class="align"></div>
             <div class="align"></div>
-            <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
-        </div>
+            <div class="align"></div>
+            <h1>Fragment</h1>
+            <div class="align"></div>
+        </a>
     </div>
     <div>
         <img src="" alt="">
