--- a/store/index.html
+++ b/store/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #000000;
+            background-color: gray;
             margin: 0;
         }
         .header {
@@ -72,12 +72,12 @@
             margin: 5px 0;
         }
         .content {
-            background-color: #000000;
+            background-color: gray;
             padding: 20px;
             text-align: center;
         }
         .content-1 {
-            background-color: #000000;
+            background-color: gray;
             padding: 20px;
             text-align: center;
             height: 100px;
