--- a/store/index.html
+++ b/store/index.html
@@ -31,6 +31,7 @@
             text-align: center;
             width: 250px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            color: #ffffff;
         }
         .card img {
             width: 80px; 
@@ -177,7 +178,7 @@
         </nav>
     </header>
     <div class="banner">
-        <div class="header-text"><h1> RANK </h1></div>
+        <div class="header-text"><h1> STORE </h1></div>
     </div>
     <hr>
 
@@ -190,7 +191,7 @@
             <h1>Rank</h1>
             <div class="align"></div>
         </a>
-        <a href="rank" class="card btn">
+        <a href="fragment" class="card btn">
             <img src="fragment.png" alt="Fragment" class="img">
             <div class="align"></div>
             <div class="align"></div>
@@ -224,11 +225,6 @@
             }
             lastScrollY = window.scrollY;
         });
-    </script>
-    <script type="text/javascript">
-        directrank(function() {
-            window.location.href = "https://discord.com/invite/ekPUh8w59W";
-        }, 0);
     </script>
     <footer>
         <div class="footer-content">
