--- a/store/index.html
+++ b/store/index.html
@@ -47,7 +47,7 @@
             font-family: Arial Black;
         }
         footer {
-            background-color: #e6a823;
+            background-color: solid black;
             padding: 20px;
             text-align: left;
             font-size: 14px;
@@ -188,16 +188,16 @@
             <div class="align"></div>
             <div class="align"></div>
             <div class="align"></div>
-            <h1>Rank</h1>
             <div class="align"></div>
+            <h1>Rank</h1>
         </a>
         <a href="fragment" class="card btn">
             <img src="fragment.png" alt="Fragment" class="img">
             <div class="align"></div>
             <div class="align"></div>
             <div class="align"></div>
-            <h1>Fragment</h1>
             <div class="align"></div>
+            <h1>Fragment</h1>
         </a>
     </div>
     <div>
