--- a/store/index.html
+++ b/store/index.html
@@ -47,7 +47,7 @@
             font-family: Arial Black;
         }
         footer {
-            background-color: solid black;
+            background-color: black;
             padding: 20px;
             text-align: left;
             font-size: 14px;
