--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #ff9800;
+            background-color: gray;
             margin: 0;
         }
         .header {
@@ -24,13 +24,14 @@
             color: #ffffff;
         }
         .card {
-            background-color: hsl(0, 0%, 100%);
+            background-color: #262423;
             border-radius: 10px;
             padding: 20px;
             margin: 10px;
             text-align: center;
             width: 150px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            color: #ffffff;
         }
         .card img {
             width: 80px; 
@@ -46,7 +47,7 @@
             font-family: Arial Black;
         }
         footer {
-            background-color: #e6a823;
+            background-color: black;
             padding: 20px;
             text-align: left;
             font-size: 14px;
@@ -72,12 +73,12 @@
             margin: 5px 0;
         }
         .content {
-            background-color: #ff9800;
+            background-color: gray;
             padding: 20px;
             text-align: center;
         }
         .content-1 {
-            background-color: #ff9800;
+            background-color: gray;
             padding: 20px;
             text-align: center;
             height: 100px;
@@ -94,7 +95,7 @@
         }
         .banner {
             background-image: url('banner.jpg');
-            background-color: #ff9800;
+            background-color: gray;
             background-size: cover;
             background-attachment: fixed;
             height: 370px;
