--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -36,6 +36,7 @@
         .card img {
             width: 80px; 
             height: auto;
+            align-item: center;
         }
         .coming-soon {
             font-size: 24px;
@@ -122,7 +123,7 @@
         }
         .align {
             color: #ffffff;
-            background-color: #ffffff;
+            background-color: #262423;
             font-size: 400%;
             height: 23px;
         }
