--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -36,7 +36,7 @@
         .card img {
             width: 80px; 
             height: auto;
-            align-item: center;
+            align-self: center;
         }
         .coming-soon {
             font-size: 24px;
