--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -130,9 +130,9 @@
         .button {
             width: auto;
             height: 40px;
-            background-color: #ffffff;
+            background-color: #262423;
             color: #000000;
-            border-color: #ff9800;
+            border-color: gray;
         }
         h4 {
             font-size: 140%;
