--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -131,15 +131,15 @@
             width: auto;
             height: 40px;
             background-color: #262423;
-            color: #000000;
+            color: #ffffff;
             border-color: gray;
         }
         h4 {
             font-size: 140%;
         }
         .button:hover {
-            background-color: #ff9800;
-            color: #ffffff;
+            background-color: gray;
+            color: #000000;
         }
     </style>
 </head>
