--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -14,7 +14,7 @@
         .header {
             position: fixed;
             top: 0;
-            width: 100%;
+            width: auto;
             background-color: rgba(0, 0, 0, 0);
             color: #ffffff;
             z-index: 1000;
