--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -14,7 +14,7 @@
         .header {
             position: fixed;
             top: 0;
-            width: auto;
+            width: 100%;
             background-color: rgba(0, 0, 0, 0);
             color: #ffffff;
             z-index: 1000;
@@ -97,7 +97,7 @@
         .banner {
             background-image: url('banner.jpg');
             background-color: gray;
-            background-size: cover;
+            background-size: auto;
             background-attachment: fixed;
             height: 370px;
             color: white;
