--- a/store/rank/index.html
+++ b/store/rank/index.html
@@ -97,7 +97,7 @@
         .banner {
             background-image: url('banner.jpg');
             background-color: gray;
-            background-size: auto;
+            background-size: cover;
             background-attachment: fixed;
             height: 370px;
             color: white;
