--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -11,8 +11,7 @@
                 position: absolute;
                 display: none;
                 top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%)
+                align-self: center;
             }
             .exit {
                 position: relative;
