--- a/test/index.html
+++ b/test/index.html
@@ -43,6 +43,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <iframe src="https://discord.com/widget?id=1273610930697277471&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         <div>
             <iframe src="embed/index.html" style="height: 1000px; width: auto;"></iframe>
         </div>
