--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -11,7 +11,7 @@
                 position: absolute;
                 display: none;
                 top: 50%;
-                transform: translate(-50% -50%);
+                transform: translate(-50%, -50%);
             }
             .exit {
                 position: relative;
