--- a/test/embed/index.html
+++ b/test/embed/index.html
@@ -11,6 +11,7 @@
                 position: absolute;
                 display: none;
                 top: 50%;
+                left: 50%;
                 transform: translate(-50%, -50%);
             }
             .exit {
