--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -175,38 +175,38 @@
 
     <div class="card-align">
         <div class="card">
-            <img src="2.png" alt="Rare Rank">
-            <h2>Rare Rank</h2>
-            <p class="p">Rp 15k / $0.99</p>
+            <img src="fragment.png" alt="Rare Rank">
+            <h2>x100 fragment</h2>
+            <p class="p">Rp 10k</p>
             <div class="align"></div>
             <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
-            <img src="3.png" alt="Super Rare Rank">
-            <h2>Super Rare Rank</h2>
-            <p class="p">Rp 50k / $3.10</p>
+            <img src="fragment.png" alt="Super Rare Rank">
+            <h2>x500 fragment</h2>
+            <p class="p">Rp 50k</p>
             <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
-            <img src="4.png" alt="Super Super Rare Rank">
-            <h2>Super Super Rare Rank</h2>
-            <p class="p">Rp 75k / $4.65</p>
+            <img src="fragment.png" alt="Super Super Rare Rank">
+            <h2>x800 fragment</h2>
+            <p class="p">Rp 80k</p>
             <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
-            <img src="5.png" alt="Super Super Rare+ Rank">
-            <h2>Super Super Rare+ Rank</h2>
-            <p class="p">Rp 150k / $9.22</p>
+            <img src="fragment.png" alt="Super Super Rare+ Rank">
+            <h2>x1500 fragment</h2>
+            <p class="p">Rp 150k</p>
             <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
-            <img src="6.png" alt="Super Super Rare++ Rank">
-            <h2>Super Super Rare++ Rank</h2>
-            <p class="p">Rp 215k / $13.22</p>
+            <img src="fragment.png" alt="Super Super Rare++ Rank">
+            <h2>x2000 fragment</h2>
+            <p class="p">Rp 200k</p>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
