--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -187,12 +187,14 @@
             <h2>x500 fragment</h2>
             <p class="p">Rp 50k</p>
             <div class="align"></div>
+            <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Super Rare Rank">
             <h2>x800 fragment</h2>
             <p class="p">Rp 80k</p>
+            <div class="align"></div>
             <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
@@ -201,12 +203,15 @@
             <h2>x1500 fragment</h2>
             <p class="p">Rp 150k</p>
             <div class="align"></div>
+            <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
         <div class="card">
             <img src="fragment.png" alt="Super Super Rare++ Rank">
             <h2>x2000 fragment</h2>
             <p class="p">Rp 200k</p>
+            <div class="align"></div>
+            <div class="align"></div>
             <a href="https://four.my.id/payment" class="button btn"><h4>ORDER</h4></a>
         </div>
     </div>
