--- a/perks/index.html
+++ b/perks/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" type="image/x-icon" href="icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-      body {
-        background-color: #ff9800;
-        margin: 0;
-      }
-      .header {
+        body {
+            background-color: gray;
+            margin: 0;
+        }
+        .header {
             position: fixed;
             top: 0;
             width: 100%;
@@ -31,8 +31,8 @@
             font-size: 2em;
             color: #ffffff;
         }
-      footer {
-            background-color: #e6a823;
+        footer {
+            background-color: black;
             padding: 20px;
             text-align: left;
             font-size: 14px;
@@ -58,19 +58,19 @@
             margin: 5px 0;
         }
         .content {
-            background-color: #ff9800;
+            background-color: gray;
             padding: 20px;
             text-align: center;
         }
         .content-1 {
-            background-color: #ff9800;
+            background-color: gray;
             padding: 20px;
             text-align: center;
             height: 100px;
         }
         .banner {
             background-image: url('banner.jpg');
-            background-color: #ff9800;
+            background-color: gray;
             background-size: cover;
             background-attachment: fixed;
             height: 370px;
